ChangeLog for ARQ
=================

==== ARQ 2.3

+ Added { SELECT } (nested SELECT) and LET (assignment) to ARQ extended SPARQL.

+ Added optimization rewrite of algebra expressions for FILTER(?x = :x) and FILTER(sameTerm(?x, :x))
  so that the required term is substituted into the pattern before execution.
  Cautiously applied to basic graph patterns and quad patterns.
 
+ Bug fix: ARQ 2.2 broke property functions in many nested structures. 

+ src-examples: example of SPARQL/Update

+ Fix bug: OpUnion flattening was not happening (Main query engine, OpCompiler) 

+ Fix bug: HttQueryEngine(in HttpQuery) generated bad POST requests with a trailing &.

+ New command arq.load, which loads files into graphs.  Special case of arq.update

==== ARQ 2.2

+ Added command line tool, arq.update, for applying SPARQL/Update requests
  to a graph store or dataset described by an assembler file.

+ LARQ: 
  Remove restriction that indexes have to be closed for writing before reading
  Becare: in Lucene, reader indexes (like LARQIndexes) see the index as at the point
  in time when the index was created.  Must get a new reader to see later updates.

+ QueryEngineHTTP
  + Can be created via QueryExecutionFactory
  + Operations for adding HTTP parameters and also for basic authentication of HTTP.  

+ Added ParserRegistry (courtesy of Olaf Hartig)

+ Reworked property functions so they formally in the algebra.

+ Jar change: commons-logging-1.1.1.jar

+ Bug fix: text output of result sets sometimes gave full bNode label - revert to
  old design where a short label is used always.  

+ Bug fix: handling of empty patterns and COUNT could give no count,
  instead of a count of zero.  

+ Use base URI for realtive URI printing (i.e <foobar>)

+ Track DAWG:
  Effect of OPTIONAL {{ ... FILTER }} (must be 2 or more {{}}) changes.
  Inner {} now protects the FILTER from becoming part of the LeftJoin.  

+ Upgrade lucene-core-2.0.0.jar to lucene-2.2.0.jar